fixed home button mobile styling

--- a/src/components/pages/Home/style.css
+++ b/src/components/pages/Home/style.css
@@ -86,10 +86,10 @@ section {
   }
 
   #hostRoomDiv {
-    top: 42vh;
+    top: 37%;
   }
   
   #joinFormDiv {
-    bottom: 20vh;
+    bottom: 15%;
   }
 }
